--- a/index.html
+++ b/index.html
@@ -398,7 +398,7 @@
 			</div>
 			<div class="subscribe-wrapper">
 				<p class="social-invite-text"> Підпишись на розсилку</p>
-				<form>
+				<form class="subscribe-form">
 					<label>
 						<input 
 						type="email"
@@ -434,7 +434,7 @@
 						type="text" 
 						class="modal-form-input"
 						required
-						pattern="[a-zA-Zа-яА-ЯіІїЇ`ʼ]"
+						pattern="[a-zA-Zа-яА-ЯіІїЇ`ʼ]+"
 						name="user_name"
 						/>
 						<svg lang="en" aria-label="icon person" class="modal-input-icon">
@@ -448,7 +448,8 @@
 						<input 
 						type="tel" 
 						class="modal-form-input" 
-						required pattern="[0-9]{3}-[0-9]{3}-[0-9]{2}-[0-9]{2}"
+						required 
+						pattern="[0-9]{3}-[0-9]{3}-[0-9]{2}-[0-9]{2}"
 						title="xxx-xxx-xx-xx" 
 						name="user_phone_number"
 						/>	
@@ -481,7 +482,8 @@
 				</label>
 				<label class="modal-form-check-field">
 					<input 
-					type="checkbox" 
+					type="checkbox"
+					required 
 					name="user-polisy" 
 					class="modal-form-checkbox">
 					<svg class="modal-input-check-icon">
