--- a/portfolio.html
+++ b/portfolio.html
@@ -332,7 +332,7 @@
 				</div>
 				<div class="subscribe-wrapper">
 					<p class="social-invite-text"> Підпишись на розсилку</p>
-					<form>
+					<form class="subscribe-form">
 						<label>
 							<input 
 							type="email" 
